# lwc

./: Phased_Development_Plan_LWC.docx  Secure_Wireless_Communication_LWC_Project_Doc.docx  _extracted_docs.txt  doc1_fmt.txt  doc1_raw.txt  doc2_fmt.txt  doc2_raw.txt
secure-wireless-lwc-codex/: .gitignore  README.md  README_PROJECT_STATUS.md  main.py  verify_setup.py
secure-wireless-lwc-cursor/: .gitignore  README.md  Untitled  main.py  pyproject.toml  requirements.txt  setup.ps1  verify_setup.py
secure-wireless-lwc-cursor/.github/workflows/: tests.yml
secure-wireless-lwc-cursor/.pytest_cache/v/cache/: nodeids
secure-wireless-lwc-cursor/docs/: PROJECT_GOALS_STANDARDS_AND_TEST_RESULTS.md  SIMULATION_GUIDE.md  submission_checklist.txt
secure-wireless-lwc-cursor/results/: benchmark_quick.csv
secure-wireless-lwc-cursor/secure_wireless_lwc.egg-info/: PKG-INFO  SOURCES.txt
secure-wireless-lwc-cursor/src/attacks/: eavesdrop_demo.py  mitm_demo.py  replay_demo.py
secure-wireless-lwc-cursor/src/benchmark/: bench_runner.py  visualize.py
secure-wireless-lwc-cursor/src/crypto/: aes_engine.py  ascon_engine.py  base_engine.py  engine_factory.py  present_engine.py  speck_engine.py
secure-wireless-lwc-cursor/src/network/: constants.py  packet.py  receiver.py  replay_guard.py  sender.py
secure-wireless-lwc-cursor/src/utils/: key_manager.py  logger.py
secure-wireless-lwc-cursor/tests/: test_attack_simulations.py  test_bench_runner.py  test_crypto_engines.py  test_e2e.py  test_network.py  test_receiver_limits.py  test_utils.py  test_visualize.py
(+79 files in other folders)
